# test-appveyor

./: .appveyor.yml  CMakeLists.txt  README.md
include/: test-appveyor.h
src/: CMakeLists.txt  add.cpp  arrayfire.cpp  boostTStudent.cpp  eigenValues.cpp
test/: CMakeLists.txt  addTest.cpp  arrayfireTest.cpp  boostTStudentTest.cpp  eigValsTest.cpp
